# Webchat

./: .env  .env.example  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/auth/: Cargo.toml  Dockerfile
backend/auth-service/: Cargo.toml  Dockerfile
backend/auth-service/src/: auth.rs  handlers.rs  main.rs  models.rs
backend/auth/src/: auth_utils.rs  db.rs  handlers.rs  main.rs
backend/common/: Cargo.toml
backend/common/src/: models.rs
backend/core/: Cargo.toml  Dockerfile
backend/core-service/: Cargo.toml  Dockerfile
backend/core-service/src/: auth.rs  cache.rs  db.rs  main.rs  models.rs  websocket.rs
backend/core-service/src/routes/: channels.rs  messages.rs  mod.rs  servers.rs
backend/core/src/: db.rs  handlers.rs  main.rs
backend/realtime/: Cargo.toml  Dockerfile
backend/realtime/src/: handlers.rs  main.rs  pubsub.rs
docs/: API.md  DEPLOY.md  KUBERNETES.md  LIVEKIT.md  PRODUCTION.md  TESTING.md
frontend/web/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/web/src/app/: globals.css  layout.tsx  page.tsx
frontend/web/src/app/(auth)/login/: page.tsx
frontend/web/src/app/(auth)/register/: page.tsx
frontend/web/src/app/chat/: page.tsx
frontend/web/src/app/landing/: page.tsx
frontend/web/src/app/login/: page.tsx
frontend/web/src/app/register/: page.tsx
frontend/web/src/components/: ChatPanel.tsx  LoadingSkeleton.tsx  MemberList.tsx  SidebarChannels.tsx  SidebarServers.tsx  ToastProvider.tsx  VoiceFooter.tsx
frontend/web/src/hooks/: useAuth.ts
frontend/web/src/lib/: api.ts  utils.ts
frontend/web/src/services/: encryption.ts  websocket.ts
frontend/web/src/store/: authStore.ts  channelStore.ts  messageStore.ts  serverStore.ts
infrastructure/docker/: docker-compose.yml
monitoring/grafana/: alerts.yml  notification-channels.yml
monitoring/loki/: config.yml
monitoring/prometheus/: prometheus.yml
