[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
mongodb = "2.8"
jsonwebtoken = "9"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
