[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
dotenvy = "0.15"
common = { path = "../common" }
