[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", features = ["bson-uuid-0_8"] }
bson = { version = "2.9", features = ["chrono-0_4", "uuid-0_8"] }
chrono = { version = "0.4", features = ["serde"] }
