[package]
name = "core-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
